<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="main_screen_title" translatable="false">Playlist maker</string>
    <string name="settings_email_address" translatable="false">amdoit@ya.ru</string>
    <string name="settings_user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">Поиск</string>
    <string name="media_list">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_info">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
     <string name="play_list_plug">Тут будет плейлист и медиатека</string>
    <string name="settings_share_text">Крутой курс по Андроид разработке https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_edittext_hint">Поиск</string>
    <string name="no_tracks_found">Ничего не нашлось</string>
    <string name="no_tracks_internet_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_tracks_internet_error_button">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_search_history_button">Очистить историю</string>
    <string name="player_screen_duration">Длительность</string>
    <string name="player_screen_album">Альбом</string>
    <string name="player_screen_year">Год</string>
    <string name="player_screen_genre">Жанр</string>
    <string name="player_screen_country">Страна</string>
    <string name="player_screen_track_error">При воспроизведении трека произошла ошибка</string>
    <string name="player_screen_add_to_favorite">Трек \"%s\" добавлен в избранное</string>
    <string name="player_screen_remove_from_favorite">Трек \"%s\" удален из избранного</string>
    <string name="unknown_country">Неизвестная страна</string>
    <string name="play_list_new_list">Новый плейлист</string>
    <string name="play_list_empty">Ваша медиатека пуста</string>
    <string name="play_list_no_lists">Вы не создали\nни одного плейлиста</string>
    <string name="play_list_favorite_tracks">Избранные треки</string>
    <string name="play_list_playlists">Плейлисты</string>
    <string name="play_list_mediateka">Медиатека</string>
    <string name="play_list_add_new_screen_title">Новый плейлист</string>
    <string name="play_list_add_new_button">Создать</string>
    <string name="play_list_add_to_list">Добавить в плейлист</string>
    <string name="play_list_name_placeholder">Название*</string>
    <string name="play_list_description_placeholder">Описание</string>
    <string name="play_list_go_back_title">Завершить создание плейлиста?</string>
    <string name="play_list_go_back_description">Все несохраненные данные будут потеряны</string>
    <string name="play_list_go_back_confirm">Завершить</string>
    <string name="play_list_go_back_cancel">Отмена</string>
    <string name="play_list_created_tpl">Плейлист [playlist] создан</string>
    <string name="play_list_success_add_track_tpl">Добавлено в плейлист «[playlist]»</string>
    <string name="play_list_fail_add_track_tpl">Трек уже добавлен в плейлист «[playlist]»</string>
    <string name="track_counter_declination">трек трека треков</string>
    <string name="minutes_counter_declination">минута минуты минут</string>
    <string name="play_list_image_error">Ошибка: неподдерживаемый формат изображения</string>
    <string name="clear_playlist">Очистить плейлист</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete_playlist">Удалить плейлист</string>
    <string name="playlist_menu_delete_track">Удалить трек</string>
    <string name="playlist_menu_delete_track_question">Хотите удалить трек «[track]»?</string>
    <string name="playlist_menu_delete_playlist_question">Хотите удалить плейлист «[playlist]»?</string>
    <string name="YES">Удалить</string>
    <string name="NO">Отмена</string>
    <string name="playlist_edit_title">Редактировать</string>
    <string name="playlist_edit_button_text">Сохранить</string>
    <string name="playlist_no_tracks_to_share">В плейлисте «[playlist]» нет списка треков, которым можно поделиться</string>
    <string name="playlist_no_tracks">В плейлисте нет треков</string>
</resources>