<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <FrameLayout style="@style/panelHeader">

        <TextView
            style="@style/panelHeaderText"
            android:text="@string/settings" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <FrameLayout style="@style/SettingsItemCenter">

            <TextView
                style="@style/SettingsItemCenter_text"
                android:text="@string/dark_theme" />

            <FrameLayout style="@style/SettingsItemCenter_switch">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/themeSwitcher"
                    style="@style/themeSwitcher" />

            </FrameLayout>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_share"
            style="@style/SettingsItemCenter">

            <TextView
                style="@style/SettingsItemCenter_text"
                android:text="@string/share_info" />

            <FrameLayout
                style="@style/SettingsItemCenter_icon"
                android:background="@drawable/share" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_support_email"
            style="@style/SettingsItemCenter">

            <TextView
                style="@style/SettingsItemCenter_text"
                android:text="@string/support" />

            <FrameLayout
                style="@style/SettingsItemCenter_icon"
                android:background="@drawable/support">


            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/button_user_agreement"
            style="@style/SettingsItemCenter">

            <TextView
                style="@style/SettingsItemCenter_text"
                android:text="@string/user_agreement" />

            <FrameLayout
                style="@style/SettingsItemCenter_icon"
                android:background="@drawable/arrow_forward" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>