<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.playlists.AddNewPlayListFragment">

    <FrameLayout
        android:id="@+id/backButton"
        style="@style/backButton">

        <TextView
            style="@style/panelHeaderText"
            android:text="@string/play_list_add_new_screen_title" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playlistPhoto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="26dp"
                android:background="@drawable/add_photo_not_selected"
                android:scaleType="centerInside"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlistName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/play_list_name_placeholder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlistPhoto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlaylistName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlistDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/play_list_description_placeholder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlistName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlaylistDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/scrolledButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/add_playlist_button"
                android:enabled="false"
                android:text="@string/play_list_add_new_button"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlistDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@id/scrolledButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/fixedButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/add_playlist_button"
        android:enabled="false"
        android:text="@string/play_list_add_new_button"
        android:textAllCaps="false"
        android:textColor="#FFF" />

</FrameLayout>